@@ -11,22 +11,6 @@ Then /^I should be on the success page$/ do
   @page.title.should == 'Success'
 end
 
-When /^I search for the table cell by "([^\"]*)"$/ do |how|
-  @cell_data = @page.send "cell_#{how}"
-end
-
-When /^I retrieve a table cell element by "([^"]*)" and "([^"]*)"$/ do |param1, param2|
-  @cell_data = @page.send "cell_#{param1}_#{param2}"
-end
-
-When /^I retrieve a table element by "([^\"]*)"$/ do |how|
-  @element = @page.send "table_#{how}_element"
-end
-
-When /^I retrieve a table element by "([^"]*)" and "([^"]*)"$/ do |param1, param2|
-  @element = @page.send "table_#{param1}_#{param2}_element"
-end
-
 When /^I get the image element$/ do
   @element = @page.image_id_image
 end
