@@ -168,5 +168,20 @@ module PageObject
     def span_element(identifier)
       platform.span_for(identifier.clone)
     end
+    
+    #
+    # Finds a table
+    #
+    # @param [Hash] identifier how we find a table.  You can use a multiple paramaters
+    #   by combining of any of the following except xpath.  The valid keys are:
+    #   * :class => Watir and Selenium
+    #   * :id => Watir and Selenium
+    #   * :index => Watir and Selenium
+    #   * :name => Watir and Selenium
+    #   * :xpath => Watir and Selenium
+    #
+    def table_element(identifier)
+      platform.table_for(identifier.clone)
+    end
   end
 end
